bindata/assets/kube-controller-manager/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: openshift-kube-controller-manager
  name: kube-controller-manager
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: serving-cert
  labels:
    prometheus: "kube-controller-manager"
spec:
  selector:
    kube-controller-manager: "true"
  ports:
  - name: https
    port: 443
    targetPort: 10257
  - name: cluster-policy-https
    port: 10357
    targetPort: 10357
