bindata/assets/kube-controller-manager/networkpolicy-installer-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-installer
  namespace: openshift-kube-controller-manager
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - installer
  policyTypes:
  - Egress
  egress:
  # Allow all egress traffic
  # required for egress to kube-apiserver pods
  - {}
  # Allow DNS resolution
  # this rule overlaps with the generic egress rule but exists for documentation purposes
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
    ports:
    - protocol: TCP
      port: 5353
    - protocol: UDP
      port: 5353
